# cmd/api/docs/swagger.yaml
@@ -57,24 +57,24 @@ definitions:
     type: object
   request.RegisterBusinessDetailsRequest:
     properties:
-      company_address:
+      accountType_type:
         type: string
-      company_city:
+      company_address:
         type: string
       company_country:
         type: string
+      company_description:
+        type: string
+      company_industry:
+        type: string
       company_name:
         type: string
-      company_postal_code:
-        type: string
-      company_website:
-        type: string
-      employment_type:
+      company_size:
         type: string
     required:
     - company_address
-    - company_city
     - company_country
+    - company_description
     - company_name
     type: object
   request.RegisterUserRequest:
