# internal/adapters/handlers/user_handler.go
@@ -161,7 +161,6 @@ func (h *UserHandler) UpdateProfile(ctx *gin.Context) {
 		Gender:              &req.Gender,
 		ResidentialCountry:  &req.ResidentialCountry,
 		JobRole:             &req.JobRole,
-		CompanyWebsite:      &req.CompanyWebsite,
 		EmploymentType:      &req.EmploymentType,
 	}
 
